# UnderCore

./: .gitignore  CMakeLists.txt  Undercore.kdev4
glad/include/glad/: glad.h
glad/src/: glad.c
include/: setup.hpp  shader.hpp
include/camera/: camera.hpp  fly_camera.hpp  fps_camera.hpp
include/geometry/: mesh.hpp  primitives.hpp  vertex.hpp
include/texture/: material.hpp  stb_image.h  texture.hpp
include/window/: event.hpp  keyboard_key.hpp  window.hpp
src/: setup.cpp  shader.cpp
src/camera/: camera.cpp  fly_camera.cpp  fps_camera.cpp
src/geometry/: mesh.cpp  vertex.cpp
src/texture/: stb_image.cpp  texture.cpp
src/window/: event.cpp  window.cpp
